crates/idl-rust/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v10_mutable.snap
---
source: crates/idl-rust/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"@mutable struct M { @id(1) long a; @id(2) string b; };\")"
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

/// Generated by `zerodds-idl-rust` from IDL.
#[allow(non_snake_case)]
#[derive(Debug, Clone, PartialEq, Default)]
pub struct M {
    pub a: i32,
    pub b: String,
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_dcps::DdsType for M {
    const TYPE_NAME: &'static str = "M";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Mutable;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0x46, 0xc5, 0xf1, 0x81, 0x05, 0x6d, 0xb3, 0x3c, 0x4c, 0x8e, 0xe4, 0x87, 0x88, 0x66]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            let mut enc = zerodds_cdr::struct_enc::MutableStructEncoder::new(w, ::std::vec![1, 2]);
            enc.encode_member_lc(1, false, zerodds_cdr::struct_enc::LengthCode::Lc2, |w| { <_ as zerodds_cdr::CdrEncode>::encode(&self.a, w)?; Ok(()) })?;
            enc.encode_member_lc(2, false, zerodds_cdr::struct_enc::LengthCode::Lc5, |w| { <_ as zerodds_cdr::CdrEncode>::encode(&self.b, w)?; Ok(()) })?;
            enc.finish()?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn encode_be(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            let mut enc = zerodds_cdr::struct_enc::MutableStructEncoder::new(w, ::std::vec![1, 2]);
            enc.encode_member_lc(1, false, zerodds_cdr::struct_enc::LengthCode::Lc2, |w| { <_ as zerodds_cdr::CdrEncode>::encode(&self.a, w)?; Ok(()) })?;
            enc.encode_member_lc(2, false, zerodds_cdr::struct_enc::LengthCode::Lc5, |w| { <_ as zerodds_cdr::CdrEncode>::encode(&self.b, w)?; Ok(()) })?;
            enc.finish()?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            // member-id 1
            let mut a: ::core::option::Option<i32> = ::core::option::Option::None;
            // member-id 2
            let mut b: ::core::option::Option<String> = ::core::option::Option::None;
            loop {
                match zerodds_cdr::struct_enc::read_mutable_member(r)? {
                    ::core::option::Option::Some(member) => {
                        let mut body_reader = zerodds_cdr::BufferReader::new(member.body, zerodds_cdr::BufferReader::endianness(r)).xcdr2();
                        match member.member_id {
                            1 => {
                                a = ::core::option::Option::Some(<i32 as zerodds_cdr::CdrDecode>::decode(&mut body_reader)?);
                            }
                            2 => {
                                b = ::core::option::Option::Some(<String as zerodds_cdr::CdrDecode>::decode(&mut body_reader)?);
                            }
                            _ => {
                                if member.must_understand {
                                    return ::core::result::Result::Err(zerodds_cdr::DecodeError::UnknownMustUnderstandMember {
                                        member_id: member.member_id,
                                    });
                                }
                                // unknown optional member: skip body
                            }
                        }
                    }
                    ::core::option::Option::None => break,
                }
            }
            ::core::result::Result::Ok(Self {
                a: a.ok_or(zerodds_cdr::DecodeError::MissingNonOptionalMember { member_id: 1 })?,
                b: b.ok_or(zerodds_cdr::DecodeError::MissingNonOptionalMember { member_id: 2 })?,
            })
        }).map_err(::core::convert::Into::into)
    }

    fn decode_be(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            // member-id 1
            let mut a: ::core::option::Option<i32> = ::core::option::Option::None;
            // member-id 2
            let mut b: ::core::option::Option<String> = ::core::option::Option::None;
            loop {
                match zerodds_cdr::struct_enc::read_mutable_member(r)? {
                    ::core::option::Option::Some(member) => {
                        let mut body_reader = zerodds_cdr::BufferReader::new(member.body, zerodds_cdr::BufferReader::endianness(r)).xcdr2();
                        match member.member_id {
                            1 => {
                                a = ::core::option::Option::Some(<i32 as zerodds_cdr::CdrDecode>::decode(&mut body_reader)?);
                            }
                            2 => {
                                b = ::core::option::Option::Some(<String as zerodds_cdr::CdrDecode>::decode(&mut body_reader)?);
                            }
                            _ => {
                                if member.must_understand {
                                    return ::core::result::Result::Err(zerodds_cdr::DecodeError::UnknownMustUnderstandMember {
                                        member_id: member.member_id,
                                    });
                                }
                                // unknown optional member: skip body
                            }
                        }
                    }
                    ::core::option::Option::None => break,
                }
            }
            ::core::result::Result::Ok(Self {
                a: a.ok_or(zerodds_cdr::DecodeError::MissingNonOptionalMember { member_id: 1 })?,
                b: b.ok_or(zerodds_cdr::DecodeError::MissingNonOptionalMember { member_id: 2 })?,
            })
        }).map_err(::core::convert::Into::into)
    }

    fn encode_xcdr1(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrEncode>::encode(self, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode_xcdr1(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrDecode>::decode(&mut reader).map_err(::core::convert::Into::into)
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_dcps::FilterValue> {
        match path {
            "a" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Int(self.a as i64)),
            "b" => ::core::option::Option::Some(zerodds_dcps::FilterValue::String(self.b.clone())),
            _ => ::core::option::Option::None,
        }
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrEncode for M {
    fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        if writer.max_alignment() == 4 {
            zerodds_cdr::struct_enc::encode_appendable(writer, |w| {
                let mut enc = zerodds_cdr::struct_enc::MutableStructEncoder::new(w, ::std::vec![1, 2]);
                enc.encode_member_lc(1, false, zerodds_cdr::struct_enc::LengthCode::Lc2, |w| { <_ as zerodds_cdr::CdrEncode>::encode(&self.a, w)?; Ok(()) })?;
                enc.encode_member_lc(2, false, zerodds_cdr::struct_enc::LengthCode::Lc5, |w| { <_ as zerodds_cdr::CdrEncode>::encode(&self.b, w)?; Ok(()) })?;
                enc.finish()?;
                Ok(())
            })?;
        } else {
            zerodds_cdr::xcdr1::encode_pl_cdr1_member(writer, 1, |w| { <_ as zerodds_cdr::CdrEncode>::encode(&self.a, w)?; Ok(()) })?;
            zerodds_cdr::xcdr1::encode_pl_cdr1_member(writer, 2, |w| { <_ as zerodds_cdr::CdrEncode>::encode(&self.b, w)?; Ok(()) })?;
            zerodds_cdr::xcdr1::write_pl_cdr1_sentinel(writer)?;
        }
        ::core::result::Result::Ok(())
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrDecode for M {
    fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        if reader.max_alignment() == 4 {
        zerodds_cdr::struct_enc::decode_appendable(reader, |r| {
            // member-id 1
            let mut a: ::core::option::Option<i32> = ::core::option::Option::None;
            // member-id 2
            let mut b: ::core::option::Option<String> = ::core::option::Option::None;
            loop {
                match zerodds_cdr::struct_enc::read_mutable_member(r)? {
                    ::core::option::Option::Some(member) => {
                        let mut body_reader = zerodds_cdr::BufferReader::new(member.body, zerodds_cdr::BufferReader::endianness(r)).xcdr2();
                        match member.member_id {
                            1 => {
                                a = ::core::option::Option::Some(<i32 as zerodds_cdr::CdrDecode>::decode(&mut body_reader)?);
                            }
                            2 => {
                                b = ::core::option::Option::Some(<String as zerodds_cdr::CdrDecode>::decode(&mut body_reader)?);
                            }
                            _ => {
                                if member.must_understand {
                                    return ::core::result::Result::Err(zerodds_cdr::DecodeError::UnknownMustUnderstandMember {
                                        member_id: member.member_id,
                                    });
                                }
                                // unknown optional member: skip body
                            }
                        }
                    }
                    ::core::option::Option::None => break,
                }
            }
            ::core::result::Result::Ok(Self {
                a: a.ok_or(zerodds_cdr::DecodeError::MissingNonOptionalMember { member_id: 1 })?,
                b: b.ok_or(zerodds_cdr::DecodeError::MissingNonOptionalMember { member_id: 2 })?,
            })
        })
        } else {
            // member-id 1
            let mut a: ::core::option::Option<i32> = ::core::option::Option::None;
            // member-id 2
            let mut b: ::core::option::Option<String> = ::core::option::Option::None;
            let __endian = zerodds_cdr::BufferReader::endianness(reader);
            loop {
                match zerodds_cdr::xcdr1::read_pl_cdr1_member(reader)? {
                    ::core::option::Option::Some(member) => {
                        let mut body_reader = zerodds_cdr::BufferReader::new(&member.body, __endian);
                        match member.member_id {
                            1 => {
                                a = ::core::option::Option::Some(<i32 as zerodds_cdr::CdrDecode>::decode(&mut body_reader)?);
                            }
                            2 => {
                                b = ::core::option::Option::Some(<String as zerodds_cdr::CdrDecode>::decode(&mut body_reader)?);
                            }
                            _ => { /* unknown PL_CDR1 member: skip */ }
                        }
                    }
                    ::core::option::Option::None => break,
                }
            }
            ::core::result::Result::Ok(Self {
                a: a.ok_or(zerodds_cdr::DecodeError::MissingNonOptionalMember { member_id: 1 })?,
                b: b.ok_or(zerodds_cdr::DecodeError::MissingNonOptionalMember { member_id: 2 })?,
            })
        }
    }
}
