crates/idl-rust/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v11_optional_member_mutable.snap
---
source: crates/idl-rust/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"@mutable struct O { @id(1) @optional long maybe; };\")"
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

/// Generated by `zerodds-idl-rust` from IDL.
#[allow(non_snake_case)]
#[derive(Debug, Clone, PartialEq, Default)]
pub struct O {
    pub maybe: ::core::option::Option<i32>,
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_dcps::DdsType for O {
    const TYPE_NAME: &'static str = "O";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Mutable;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0x9d, 0x87, 0x2e, 0x1c, 0x82, 0xfe, 0x5c, 0x96, 0x97, 0x24, 0x08, 0x83, 0x35, 0x43]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            let mut enc = zerodds_cdr::struct_enc::MutableStructEncoder::new(w, ::std::vec![]);
            enc.encode_member(1, false, |w| { <_ as zerodds_cdr::CdrEncode>::encode(&self.maybe, w)?; Ok(()) })?;
            enc.finish()?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn encode_be(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::encode_appendable(&mut writer, |w| {
            let mut enc = zerodds_cdr::struct_enc::MutableStructEncoder::new(w, ::std::vec![]);
            enc.encode_member(1, false, |w| { <_ as zerodds_cdr::CdrEncode>::encode(&self.maybe, w)?; Ok(()) })?;
            enc.finish()?;
            Ok(())
        })?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            // member-id 1
            let mut maybe: ::core::option::Option<::core::option::Option<i32>> = ::core::option::Option::None;
            loop {
                match zerodds_cdr::struct_enc::read_mutable_member(r)? {
                    ::core::option::Option::Some(member) => {
                        let mut body_reader = zerodds_cdr::BufferReader::new(member.body, zerodds_cdr::BufferReader::endianness(r)).xcdr2();
                        match member.member_id {
                            1 => {
                                maybe = ::core::option::Option::Some(<::core::option::Option<i32> as zerodds_cdr::CdrDecode>::decode(&mut body_reader)?);
                            }
                            _ => {
                                if member.must_understand {
                                    return ::core::result::Result::Err(zerodds_cdr::DecodeError::UnknownMustUnderstandMember {
                                        member_id: member.member_id,
                                    });
                                }
                                // unknown optional member: skip body
                            }
                        }
                    }
                    ::core::option::Option::None => break,
                }
            }
            ::core::result::Result::Ok(Self {
                maybe: maybe.unwrap_or(::core::option::Option::None),
            })
        }).map_err(::core::convert::Into::into)
    }

    fn decode_be(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Big).xcdr2();
        zerodds_cdr::struct_enc::decode_appendable(&mut reader, |r| {
            // member-id 1
            let mut maybe: ::core::option::Option<::core::option::Option<i32>> = ::core::option::Option::None;
            loop {
                match zerodds_cdr::struct_enc::read_mutable_member(r)? {
                    ::core::option::Option::Some(member) => {
                        let mut body_reader = zerodds_cdr::BufferReader::new(member.body, zerodds_cdr::BufferReader::endianness(r)).xcdr2();
                        match member.member_id {
                            1 => {
                                maybe = ::core::option::Option::Some(<::core::option::Option<i32> as zerodds_cdr::CdrDecode>::decode(&mut body_reader)?);
                            }
                            _ => {
                                if member.must_understand {
                                    return ::core::result::Result::Err(zerodds_cdr::DecodeError::UnknownMustUnderstandMember {
                                        member_id: member.member_id,
                                    });
                                }
                                // unknown optional member: skip body
                            }
                        }
                    }
                    ::core::option::Option::None => break,
                }
            }
            ::core::result::Result::Ok(Self {
                maybe: maybe.unwrap_or(::core::option::Option::None),
            })
        }).map_err(::core::convert::Into::into)
    }

    fn encode_xcdr1(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrEncode>::encode(self, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode_xcdr1(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrDecode>::decode(&mut reader).map_err(::core::convert::Into::into)
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_dcps::FilterValue> {
        match path {
            "maybe" => self.maybe.as_ref().map(|v| zerodds_dcps::FilterValue::Int(*v as i64)),
            _ => ::core::option::Option::None,
        }
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrEncode for O {
    fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        if writer.max_alignment() == 4 {
            zerodds_cdr::struct_enc::encode_appendable(writer, |w| {
                let mut enc = zerodds_cdr::struct_enc::MutableStructEncoder::new(w, ::std::vec![]);
                enc.encode_member(1, false, |w| { <_ as zerodds_cdr::CdrEncode>::encode(&self.maybe, w)?; Ok(()) })?;
                enc.finish()?;
                Ok(())
            })?;
        } else {
            zerodds_cdr::xcdr1::encode_pl_cdr1_member(writer, 1, |w| { <_ as zerodds_cdr::CdrEncode>::encode(&self.maybe, w)?; Ok(()) })?;
            zerodds_cdr::xcdr1::write_pl_cdr1_sentinel(writer)?;
        }
        ::core::result::Result::Ok(())
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrDecode for O {
    fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        if reader.max_alignment() == 4 {
        zerodds_cdr::struct_enc::decode_appendable(reader, |r| {
            // member-id 1
            let mut maybe: ::core::option::Option<::core::option::Option<i32>> = ::core::option::Option::None;
            loop {
                match zerodds_cdr::struct_enc::read_mutable_member(r)? {
                    ::core::option::Option::Some(member) => {
                        let mut body_reader = zerodds_cdr::BufferReader::new(member.body, zerodds_cdr::BufferReader::endianness(r)).xcdr2();
                        match member.member_id {
                            1 => {
                                maybe = ::core::option::Option::Some(<::core::option::Option<i32> as zerodds_cdr::CdrDecode>::decode(&mut body_reader)?);
                            }
                            _ => {
                                if member.must_understand {
                                    return ::core::result::Result::Err(zerodds_cdr::DecodeError::UnknownMustUnderstandMember {
                                        member_id: member.member_id,
                                    });
                                }
                                // unknown optional member: skip body
                            }
                        }
                    }
                    ::core::option::Option::None => break,
                }
            }
            ::core::result::Result::Ok(Self {
                maybe: maybe.unwrap_or(::core::option::Option::None),
            })
        })
        } else {
            // member-id 1
            let mut maybe: ::core::option::Option<::core::option::Option<i32>> = ::core::option::Option::None;
            let __endian = zerodds_cdr::BufferReader::endianness(reader);
            loop {
                match zerodds_cdr::xcdr1::read_pl_cdr1_member(reader)? {
                    ::core::option::Option::Some(member) => {
                        let mut body_reader = zerodds_cdr::BufferReader::new(&member.body, __endian);
                        match member.member_id {
                            1 => {
                                maybe = ::core::option::Option::Some(<::core::option::Option<i32> as zerodds_cdr::CdrDecode>::decode(&mut body_reader)?);
                            }
                            _ => { /* unknown PL_CDR1 member: skip */ }
                        }
                    }
                    ::core::option::Option::None => break,
                }
            }
            ::core::result::Result::Ok(Self {
                maybe: maybe.unwrap_or(::core::option::Option::None),
            })
        }
    }
}
