crates/idl-rust/tests/snapshots/snapshot_xcdr2_vectors__snapshot_v3_mixed_primitives_final.snap
---
source: crates/idl-rust/tests/snapshot_xcdr2_vectors.rs
expression: "gen_default(\"@final struct All {\\n\\\n         boolean b; octet o; short s; unsigned short us;\\n\\\n         long l; unsigned long ul; long long ll; unsigned long long ull;\\n\\\n         float f; double d; };\")"
---
// SPDX-License-Identifier: Apache-2.0
// Auto-generated by `zerodds-idl-rust`. Do not edit by hand.

/// Generated by `zerodds-idl-rust` from IDL.
#[allow(non_snake_case)]
#[derive(Debug, Clone, PartialEq, Default)]
pub struct All {
    pub b: bool,
    pub o: u8,
    pub s: i16,
    pub us: u16,
    pub l: i32,
    pub ul: u32,
    pub ll: i64,
    pub ull: u64,
    pub f: f32,
    pub d: f64,
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_dcps::DdsType for All {
    const TYPE_NAME: &'static str = "All";
    const EXTENSIBILITY: zerodds_dcps::Extensibility = zerodds_dcps::Extensibility::Final;
    const TYPE_IDENTIFIER: zerodds_types::TypeIdentifier = zerodds_types::TypeIdentifier::EquivalenceHashComplete(zerodds_types::EquivalenceHash([0x65, 0x01, 0x45, 0xda, 0x31, 0x52, 0x39, 0x3a, 0xc9, 0x5c, 0xd3, 0xa8, 0x7c, 0xd4]));

    fn encode(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little).xcdr2();
        <_ as zerodds_cdr::CdrEncode>::encode(&self.b, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.o, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.s, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.us, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.l, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.ul, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.ll, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.ull, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.f, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.d, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn encode_be(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Big).xcdr2();
        <_ as zerodds_cdr::CdrEncode>::encode(&self.b, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.o, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.s, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.us, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.l, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.ul, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.ll, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.ull, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.f, &mut writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.d, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little).xcdr2();
        let b = <bool as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let o = <u8 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let s = <i16 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let us = <u16 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let l = <i32 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let ul = <u32 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let ll = <i64 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let ull = <u64 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let f = <f32 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let d = <f64 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        Ok(Self {
            b,
            o,
            s,
            us,
            l,
            ul,
            ll,
            ull,
            f,
            d,
        })
    }

    fn decode_be(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Big).xcdr2();
        let b = <bool as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let o = <u8 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let s = <i16 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let us = <u16 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let l = <i32 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let ul = <u32 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let ll = <i64 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let ull = <u64 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let f = <f32 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        let d = <f64 as zerodds_cdr::CdrDecode>::decode(&mut reader)?;
        Ok(Self {
            b,
            o,
            s,
            us,
            l,
            ul,
            ll,
            ull,
            f,
            d,
        })
    }

    fn encode_xcdr1(&self, out: &mut ::std::vec::Vec<u8>) -> ::core::result::Result<(), zerodds_dcps::EncodeError> {
        let mut writer = zerodds_cdr::BufferWriter::new(zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrEncode>::encode(self, &mut writer)?;
        out.extend_from_slice(&writer.into_bytes());
        Ok(())
    }

    fn decode_xcdr1(bytes: &[u8]) -> ::core::result::Result<Self, zerodds_dcps::DecodeError> {
        let mut reader = zerodds_cdr::BufferReader::new(bytes, zerodds_cdr::Endianness::Little);
        <Self as zerodds_cdr::CdrDecode>::decode(&mut reader).map_err(::core::convert::Into::into)
    }

    fn field_value(&self, path: &str) -> ::core::option::Option<zerodds_dcps::FilterValue> {
        match path {
            "b" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Bool(self.b)),
            "o" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Int(self.o as i64)),
            "s" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Int(self.s as i64)),
            "us" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Int(self.us as i64)),
            "l" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Int(self.l as i64)),
            "ul" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Int(self.ul as i64)),
            "ll" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Int(self.ll as i64)),
            "ull" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Int(self.ull as i64)),
            "f" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Float(self.f as f64)),
            "d" => ::core::option::Option::Some(zerodds_dcps::FilterValue::Float(self.d)),
            _ => ::core::option::Option::None,
        }
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrEncode for All {
    fn encode(&self, writer: &mut zerodds_cdr::BufferWriter) -> ::core::result::Result<(), zerodds_cdr::EncodeError> {
        <_ as zerodds_cdr::CdrEncode>::encode(&self.b, writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.o, writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.s, writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.us, writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.l, writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.ul, writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.ll, writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.ull, writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.f, writer)?;
        <_ as zerodds_cdr::CdrEncode>::encode(&self.d, writer)?;
        ::core::result::Result::Ok(())
    }
}

#[allow(clippy::too_many_lines, non_snake_case)]
impl zerodds_cdr::CdrDecode for All {
    fn decode(reader: &mut zerodds_cdr::BufferReader<'_>) -> ::core::result::Result<Self, zerodds_cdr::DecodeError> {
        let b = <bool as zerodds_cdr::CdrDecode>::decode(reader)?;
        let o = <u8 as zerodds_cdr::CdrDecode>::decode(reader)?;
        let s = <i16 as zerodds_cdr::CdrDecode>::decode(reader)?;
        let us = <u16 as zerodds_cdr::CdrDecode>::decode(reader)?;
        let l = <i32 as zerodds_cdr::CdrDecode>::decode(reader)?;
        let ul = <u32 as zerodds_cdr::CdrDecode>::decode(reader)?;
        let ll = <i64 as zerodds_cdr::CdrDecode>::decode(reader)?;
        let ull = <u64 as zerodds_cdr::CdrDecode>::decode(reader)?;
        let f = <f32 as zerodds_cdr::CdrDecode>::decode(reader)?;
        let d = <f64 as zerodds_cdr::CdrDecode>::decode(reader)?;
        ::core::result::Result::Ok(Self {
            b,
            o,
            s,
            us,
            l,
            ul,
            ll,
            ull,
            f,
            d,
        })
    }
}
